# GrAF

GrAF/trunk/GrAFd/: CMakeLists.txt  Doxyfile.in  config.h.in
GrAF/trunk/GrAFd/editor/: backendCommunication.js
GrAF/trunk/GrAFd/editor2/: demo_logic1.js  demo_logic2.js  index.html  main.css  main.js  test.js  testLib.json
GrAF/trunk/GrAFd/editor2/lib/: Mat2D.js  Vec2D.js  gle.block.js  gle.connection.branch.js  gle.connection.js  gle.gesture.js  gle.inputevent.js  gle.js  gle.settings.js  gle.view.js
GrAF/trunk/GrAFd/editor2/nls/: strings.js
GrAF/trunk/GrAFd/lib/: math.graflib
GrAF/trunk/GrAFd/src/: CMakeLists.txt  confighandler.h  editorhandler.cpp  editorhandler.hpp  globals.h  graph.cpp  graph.hpp  graphblock.cpp  graphblock.hpp  graphlib.cpp  graphlib.hpp  graphsignal.cpp  graphsignal.hpp  json.cpp  json.hpp  logger.cpp  logger.hpp  logic_elements.h  logic_elements.hpp  logicengine.cpp  logicengine.h  logicengine.hpp  main.cpp  messageregister.hpp  test.cpp
GrAF/trunk/GrAFd/src/connectors/: connector4knx.h
GrAF/trunk/GrAFd/src/logic_elements/: logicelement_const.h  logicelement_const.hpp  logicelement_dump.hpp  logicelement_generic.h  logicelement_generic.hpp  logicelement_jump.h  logicelement_jump.hpp  logicelement_move.hpp  logicelement_mul.hpp  logicelement_rel.h  logicelement_rel.hpp  logicelement_send.hpp  logicelement_sleep.hpp  logicelement_stop.h  logicelement_stop.hpp  logicelement_sum.h  logicelement_sum.hpp  variabletype.hpp
GrAF/trunk/GrAFd/test/: CMakeLists.txt  logicengine_test.cpp  test2.graf  testMandelbrot.pl
GrAF/trunk/logicd/: CMakeLists.txt  logicd.kdev4
GrAF/trunk/logicd/include/: hexdump.hpp  knx.hpp  knx_dpt.hpp  message.hpp  variabletype.hpp
GrAF/trunk/logicd/src/: cometvisu2logic.cpp  knx.cpp  knx2logic.cpp  knx_dpt.cpp  logicspy.cpp  main.cpp  send2logic.cpp  testclient.cpp
GrAFd/: CMakeLists.txt  Doxyfile.in  GrAFd.kdev4  run_local_HTTP_sever_for_editor.sh
GrAFd/editor2/: demo_logic1.js  demo_logic2.js  demo_logic_connections.js  index.html  main.css  main.js  test.js  testLib.json
GrAFd/editor2/lib/: Line2D.js  Mat2D.js  Vec2D.js  autorouter.js  compatability.js  gle.block.js  gle.connection.branch.js  gle.connection.js  gle.gesture.js  gle.inputevent.js  gle.js  gle.settings.js  gle.view.js
GrAFd/editor2/nls/de/: strings.js
GrAFd/lib/: math.graflib
GrAFd/src/: asyncsocket.hpp  confighandler.cpp  editorhandler.cpp  globals.h  graph.cpp  graph.hpp  graphblock.cpp  graphblock.hpp  graphlib.hpp  graphsignal.cpp  json.cpp  json.hpp  logger.cpp  logger.hpp  logic_elements.hpp  logicengine.cpp  logicengine.hpp  main.cpp  message.cpp  message.h  messageregister.hpp
GrAFd/src/connectors/: connector.cpp  connector.h  connector4knx.cpp
GrAFd/src/logic_elements/: logicelement_const.hpp  logicelement_dump.h  logicelement_dump.hpp  logicelement_generic.hpp  logicelement_jump.hpp  logicelement_move.h  logicelement_move.hpp  logicelement_mul.h  logicelement_mul.hpp  logicelement_rel.hpp  logicelement_send.hpp  logicelement_sleep.hpp  logicelement_sum.hpp
GrAFd/test/: CMakeLists.txt  logicengine_test.cpp  test1.graf  test2.graf
logicd/: CMakeLists.txt
logicd/include/: hexdump.hpp  knx.hpp  knx_dpt.hpp  message.hpp  netstring.hpp  variabletype.hpp
logicd/src/: cometvisu2logic.cpp  knx.cpp  knx2logic.cpp  logicspy.cpp  send2logic.cpp
